--- a/tartu2024/pubspec.yaml
+++ b/tartu2024/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
-
+  google_maps_flutter: ^2.0.6
+  share: ^2.0.4 # 
 
   cupertino_icons: ^1.0.2
 
