--- a/tartu2024/pubspec.yaml
+++ b/tartu2024/pubspec.yaml
@@ -26,10 +26,12 @@ dev_dependencies:
   build_runner: ^2.0.0
   flutter_lints: ^2.0.0
 
+# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   assets:
-    - assets/videos/
+    - assets/welcome_image.jpg
+    - assets/welcome_video.mp4
     
     
   # fonts:
