Added Wikipedia API support for attraction detail.

--- a/tartu2024/pubspec.yaml
+++ b/tartu2024/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   video_player: ^2.1.12
   youtube_player_flutter: ^8.0.0
   cupertino_icons: ^1.0.2
-
+  http: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
