Added shared preference to save favorites

--- a/tartu2024/pubspec.yaml
+++ b/tartu2024/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   cupertino_icons: ^1.0.2
   http: ^1.2.1
+  flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.0.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -32,6 +35,7 @@ flutter:
   assets:
     - assets/welcome_image.jpg
     - assets/welcome_video.mp4
+    - google.env
     
     
   # fonts:
