--- a/tartu2024/pubspec.yaml
+++ b/tartu2024/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
   path_provider: ^2.0.2
+  country_code_picker: ^2.0.0
   
 dev_dependencies:
   flutter_test:
